@@ -1,3 +1,9 @@
+2007-06-20  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Made the
+	  window appear in the center of the display and changed the wrap of
+	  the view to wrap by word.
+
 2007-06-19  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* EditorWindow.cs: Testing Serialize method.
